# python-i18n

./: README.md  pyproject.toml
src/i18n/: __init__.py  text.py
src/i18n/i18n/locales/en/LC_MESSAGES/: i18n.mo  i18n.po  pronouns.mo  pronouns.po
test/: examples.py  test.py
test/i18n/locales/en/LC_MESSAGES/: test.mo  test.po
test/test/: sample_strings.py
