# pyproject.toml
#
# License: GNU LESSER GENERAL PUBLIC LICENSE
#   https://www.gnu.org/software/gettext/manual/html_node/GNU-LGPL.html
#
# This file and its contents and all others related to this software are provided
# AS IS, WITHOUT ANY WARRANTY OR CONDITION, EXPRESS OR IMPLIED.

[project]
name = "i18n"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

